--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "lodash": "^4.17.4",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-router-dom": "^4.1.1",
     "react-scripts": "1.0.10"
   },
   "scripts": {
