--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
+  },
+  "homepage": "https://arcticmatt.github.io/online-omnichord",
+  "devDependencies": {
+    "gh-pages": "^1.0.0"
   }
 }
