--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
-  "homepage": "https://arcticmatt.github.io/online-omnichord",
+  "homepage": ".",
   "devDependencies": {
     "gh-pages": "^1.0.0"
   }
